# football-players-detection-model

./: README.md  pyproject.toml
football_players_detection_model/: __init__.py  live.py  train.py
football_players_detection_model/notebooks/: testing.ipynb
football_players_detection_model/runs/fine_tuning_freezed_model/train/: args.yaml  results.csv
football_players_detection_model/runs/fine_tuning_freezed_model/train2/: args.yaml  results.csv
football_players_detection_model/runs/fine_tuning_freezed_road_model/train/: args.yaml
